@@ -31,43 +31,47 @@ import org.springframework.transaction.annotation.Transactional;
 @AutoConfigureTestDatabase(replace = Replace.ANY)
 public class SessionServiceIT {
 
-  @Autowired
-  private SessionService sessionService;
+  @Autowired private SessionService sessionService;
 
-  @Autowired
-  private SessionRepository sessionRepository;
+  @Autowired private SessionRepository sessionRepository;
 
-  @Autowired
-  private ConsultantRepository consultantRepository;
+  @Autowired private ConsultantRepository consultantRepository;
 
   @Test
   public void fetchSessionForConsultant_Should_ThrowNotFoundException_When_SessionIsNotFound() {
-    assertThrows(NotFoundException.class,
-        () -> sessionService.fetchSessionForConsultant(-1L, CONSULTANT));
+    assertThrows(
+        NotFoundException.class, () -> sessionService.fetchSessionForConsultant(-1L, CONSULTANT));
   }
 
   @Test
-  public void fetchSessionForConsultant_Should_Throw_ForbiddenException_When_ConsultantHasNoPermission() {
-    Consultant consultant = consultantRepository
-        .findByIdAndDeleteDateIsNull("fb77d849-470f-4cec-89ca-6aa673bacb88")
-        .get();
+  public void
+      fetchSessionForConsultant_Should_Throw_ForbiddenException_When_ConsultantHasNoPermission() {
+    Consultant consultant =
+        consultantRepository
+            .findByIdAndDeleteDateIsNull("fb77d849-470f-4cec-89ca-6aa673bacb88")
+            .get();
 
-    assertThrows(ForbiddenException.class,
-        () -> sessionService.fetchSessionForConsultant(1L, consultant));
+    assertThrows(
+        ForbiddenException.class, () -> sessionService.fetchSessionForConsultant(1L, consultant));
   }
 
   @Test
-  public void getSessionsByUserAndGroupOrFeedbackGroupIdsShouldBeForbiddenIfUserHasNotRequiredRole() {
-    assertThrows(ForbiddenException.class,
-        () -> sessionService.getSessionsByUserAndGroupOrFeedbackGroupIds(
-            "9c4057d0-05ad-4e86-a47c-dc5bdeec03b9", Set.of("9faSTWZ5gurHLXy4R"),
-            Collections.emptySet()));
+  public void
+      getSessionsByUserAndGroupOrFeedbackGroupIdsShouldBeForbiddenIfUserHasNotRequiredRole() {
+    assertThrows(
+        ForbiddenException.class,
+        () ->
+            sessionService.getSessionsByUserAndGroupOrFeedbackGroupIds(
+                "9c4057d0-05ad-4e86-a47c-dc5bdeec03b9",
+                Set.of("9faSTWZ5gurHLXy4R"),
+                Collections.emptySet()));
   }
 
   @Test
   public void getSessionsByUserAndGroupOrFeedbackGroupIdsShouldFetchAgencyForSession() {
-    var sessions = sessionService.getSessionsByUserAndGroupOrFeedbackGroupIds(
-        "9c4057d0-05ad-4e86-a47c-dc5bdeec03b9", Set.of("9faSTWZ5gurHLXy4R"), Set.of("user"));
+    var sessions =
+        sessionService.getSessionsByUserAndGroupOrFeedbackGroupIds(
+            "9c4057d0-05ad-4e86-a47c-dc5bdeec03b9", Set.of("9faSTWZ5gurHLXy4R"), Set.of("user"));
 
     assertEquals(1, sessions.size());
     var userSession = sessions.get(0);
@@ -75,10 +79,12 @@ public class SessionServiceIT {
   }
 
   @Test
-  public void fetchSessionForConsultant_Should_Return_ValidConsultantSessionDTO_When_ConsultantIsAssigned() {
-    Consultant consultant = consultantRepository
-        .findByIdAndDeleteDateIsNull("473f7c4b-f011-4fc2-847c-ceb636a5b399")
-        .get();
+  public void
+      fetchSessionForConsultant_Should_Return_ValidConsultantSessionDTO_When_ConsultantIsAssigned() {
+    Consultant consultant =
+        consultantRepository
+            .findByIdAndDeleteDateIsNull("473f7c4b-f011-4fc2-847c-ceb636a5b399")
+            .get();
     Session session = sessionRepository.findById(1L).get();
     ConsultantSessionDTO result = sessionService.fetchSessionForConsultant(1L, consultant);
 
@@ -101,11 +107,12 @@ public class SessionServiceIT {
 
   @Test
   @Transactional
-  public void fetchSessionForConsultant_Should_Return_ConsultantSessionDTO_When_ConsultantIsToTeamSessionAgencyAssigned() {
-    Consultant consultant = consultantRepository
-        .findByIdAndDeleteDateIsNull("e2f20d3a-1ca7-4cb5-9fac-8e26033416b3")
-        .get();
+  public void
+      fetchSessionForConsultant_Should_Return_ConsultantSessionDTO_When_ConsultantIsToTeamSessionAgencyAssigned() {
+    Consultant consultant =
+        consultantRepository
+            .findByIdAndDeleteDateIsNull("e2f20d3a-1ca7-4cb5-9fac-8e26033416b3")
+            .get();
     assertNotNull(sessionService.fetchSessionForConsultant(2L, consultant));
   }
-
 }
